<resources>
    <string name="app_name">SimpleCalc</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="division">÷</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="start_number">0</string>
    <string name="go_to_light">Go to Light</string>
    <string name="go_to_night">Go to Night</string>
    <string name="theme">theme</string>
    <string name="Light_theme">Светлая тема</string>
    <string name="Dark_theme">Тёмная тема</string>
    <string name="btn_back">Назад</string>

</resources>