<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc_background">

    <LinearLayout
        android:id="@+id/output_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="результат 48"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/operation_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="оператор = "
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/entry_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Операнд 2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_field_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@id/input_field_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/output_field"
        app:layout_constraintVertical_chainStyle="packed">

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/seven"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/eight"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/nine"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D3F51B5"
            android:text="@string/division"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_field_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@id/input_field_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_field_1">

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/four"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/five"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/six"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D3F51B5"
            android:text="@string/multiply"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_field_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toTopOf="@id/input_field_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_field_2">

        <Button
            android:id="@+id/button_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/one"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/two"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/three"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D3F51B5"
            android:text="@string/plus"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_field_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_field_3">

        <Button
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/zero"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D9C27B0"
            android:text="@string/dot"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D3F51B5"
            android:text="@string/equals"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="#4D3F51B5"
            android:text="@string/minus"
            app:cornerRadius="8dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>