<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_choice_vertical"
    tools:context=".Theme_choice">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_choice_light"
            android:layout_width="120dp"
            android:layout_height="68dp"
            android:background="#39FBC02D"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:text="@string/Light_theme"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/theme_choice_dark"
            android:layout_width="119dp"
            android:layout_height="68dp"
            android:background="#39FBC02D"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowRadius="8"
            android:text="@string/Dark_theme"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Back_click"
        android:backgroundTint="#39FBC02D"
        android:textSize="20sp"
        android:text="@string/btn_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtons" />

</androidx.constraintlayout.widget.ConstraintLayout>